--- a/index.html
+++ b/index.html
@@ -583,14 +583,13 @@ footer.site-footer{
 
 
 .dot-btn { display:none; }
-@media (max-width:880px) {
-  .dot-btn { display:flex; }
-}
 
-  
+
+
 /* ============================== */
-/* FINAL MOBILE LAYOUT (CLEAN)    */
+/* FINAL FIXED MOBILE HEADER      */
 /* ============================== */
+
 @media (max-width:880px) {
 
   /* HIDE DESKTOP NAV */
@@ -599,91 +598,103 @@ footer.site-footer{
     display: none !important;
   }
 
-  /* HEADER MAIN WRAPPER */
+  /* FIXED HEADER REPLACED WITH AUTO HEIGHT */
   .site-header {
+    position: fixed;
+    top: var(--utility-height);
+    left: 0;
+    right: 0;
+    background: #fff;
+    padding: 12px 14px;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    padding: 14px 16px;
-    gap: 14px;
-    background: #fff;
+    gap: 10px;
+    height: auto !important;      /* <<< FIXES overflow */
+    z-index: 200;
   }
 
-  /* BRAND ROW — Logo | Title | Menu */
+  /* BRAND — Logo | Title | Menu */
   .brand {
     display: grid;
     grid-template-columns: auto 1fr auto;
     align-items: center;
     width: 100%;
     gap: 6px;
-    padding: 0;
   }
 
   .brand img {
     height: 48px;
-    width: auto;
   }
 
   .brand h1 {
-    font-size: 18px;
-    line-height: 1.05;
-    font-weight: 700;
+    font-size: 17px;
+    line-height: 1.1;
     margin: 0;
-    max-width: 130px;
-    word-break: break-word;
+    max-width: 120px;
   }
 
-  /* MENU BUTTON */
+  /* MENU BUTTON (works + stays inside screen) */
   .dot-btn {
-    width: 40px;
-    height: 40px;
-    font-size: 32px;
     display: flex;
-    justify-content: center;
+    width: 38px;
+    height: 38px;
+    font-size: 30px;
     align-items: center;
+    justify-content: center;
+    background: transparent;
+    border: none;
+    cursor: pointer;
     padding: 0;
-    margin: 0;
-    overflow: hidden;
   }
 
-  .dots {
-    line-height: 0.8;
-  }
-
-  /* BUTTON ROW — Join & Donate */
+  /* JOIN / DONATE ROW */
   .nav-actions {
     display: flex;
     gap: 10px;
     width: 100%;
   }
 
-  /* MOBILE BUTTON STYLE (FINAL NATURAL WIDTH) */
   .nav-actions a {
-    flex: 0 0 auto;
-    width: auto;
     padding: 8px 14px;
     font-size: 15px;
     border-radius: 6px;
-    text-align: center;
+    flex: 0 0 auto;
   }
 
-  /* remove desktop padding */
   .btn {
-    padding: 0;
+    padding: 0 !important;
   }
 }
 
-/* ============================== */
-/* SMALLER MOBILE (extra refinement) */
-/* ============================== */
-@media (max-width:520px) {
+/* ========================= */
+/* MOBILE PANEL FIX          */
+/* ========================= */
 
-  .brand h1 {
-    font-size: 17px;
-    max-width: 115px;
-  }
+.mobile-panel {
+  position: fixed;
+  top: calc(var(--utility-height) + 100px); /* adjusts automatically */
+  left: 0;
+  right: 0;
+  background: #fff;
+  transform: translateY(-12px);
+  opacity: 0;
+  pointer-events: none;
+  transition: .25s ease;
+  z-index: 500;
 }
 
+.mobile-panel.open {
+  transform: translateY(0);
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.mobile-panel .panel-inner {
+  padding: 16px;
+}
+
+
+  
 </style>
 </head>
 <body>
@@ -721,10 +732,6 @@ footer.site-footer{
     <div class="nav-actions">
       <a class="btn btn-join" href="#">Join</a>
       <a class="btn btn-donate" href="#">Donate</a>
-    </div>
-
-
-      </button>
     </div>
 
   </div>
