--- a/index.html
+++ b/index.html
@@ -585,114 +585,115 @@ footer.site-footer{
 .dot-btn { display:none; }
 
 
-
 /* ============================== */
-/* FINAL FIXED MOBILE HEADER      */
+/* FIXED MOBILE HEADER — FINAL    */
 /* ============================== */
-
 @media (max-width:880px) {
 
-  /* HIDE DESKTOP NAV */
+  /* Hide desktop stuff */
   .top-nav,
   .side-nav-container {
-    display: none !important;
+    display:none !important;
   }
 
-  /* FIXED HEADER REPLACED WITH AUTO HEIGHT */
+  /* Auto-height header so nothing overflows */
   .site-header {
-    position: fixed;
-    top: var(--utility-height);
-    left: 0;
-    right: 0;
-    background: #fff;
-    padding: 12px 14px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    height: auto !important;      /* <<< FIXES overflow */
-    z-index: 200;
+    position:fixed;
+    top:var(--utility-height);
+    left:0; right:0;
+    background:#fff;
+    padding:12px 14px;
+    display:flex;
+    flex-direction:column;
+    gap:12px;
+    height:auto !important;
+    z-index:200;
   }
 
-  /* BRAND — Logo | Title | Menu */
+  /* BRAND ROW */
   .brand {
-    display: grid;
-    grid-template-columns: auto 1fr auto;
-    align-items: center;
-    width: 100%;
-    gap: 6px;
+    display:grid;
+    grid-template-columns:auto 1fr auto;
+    align-items:center;
+    width:100%;
+    gap:8px;                       /* more space */
   }
 
   .brand img {
-    height: 48px;
+    height:46px;                   /* slightly smaller */
   }
 
   .brand h1 {
-    font-size: 17px;
-    line-height: 1.1;
-    margin: 0;
-    max-width: 120px;
+    font-size:16px;                /* reduced to prevent overflow */
+    line-height:1.05;
+    margin:0;
+    max-width:100px;               /* THIS FIXES the overflow */
+    word-break:break-word;
   }
 
-  /* MENU BUTTON (works + stays inside screen) */
+  /* MENU BUTTON */
   .dot-btn {
-    display: flex;
-    width: 38px;
-    height: 38px;
-    font-size: 30px;
-    align-items: center;
-    justify-content: center;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    padding: 0;
+    display:flex !important;
+    width:38px;
+    height:38px;
+    font-size:30px;
+    justify-content:center;
+    align-items:center;
+    background:none;
+    border:none;
+    padding:0;
+    cursor:pointer;
+    overflow:hidden;
   }
 
-  /* JOIN / DONATE ROW */
+  .dots {
+    line-height:0.9;
+  }
+
+  /* JOIN + DONATE — FIXED */
   .nav-actions {
-    display: flex;
-    gap: 10px;
-    width: 100%;
+    display:flex;
+    width:100%;
+    gap:12px;
   }
 
   .nav-actions a {
-    padding: 8px 14px;
-    font-size: 15px;
-    border-radius: 6px;
-    flex: 0 0 auto;
+    flex:1;                         /* slightly bigger */
+    padding:10px 0 !important;      /* restores size */
+    font-size:16px !important;      /* larger text */
+    text-align:center;
+    border-radius:8px !important;
   }
 
   .btn {
-    padding: 0 !important;
+    padding:10px 0 !important;      /* override the zero padding */
   }
 }
 
 /* ========================= */
 /* MOBILE PANEL FIX          */
 /* ========================= */
-
 .mobile-panel {
-  position: fixed;
-  top: calc(var(--utility-height) + 100px); /* adjusts automatically */
-  left: 0;
-  right: 0;
-  background: #fff;
-  transform: translateY(-12px);
-  opacity: 0;
-  pointer-events: none;
-  transition: .25s ease;
-  z-index: 500;
+  position:fixed;
+  top:calc(var(--utility-height) + 110px);
+  left:0; right:0;
+  background:#fff;
+  transform:translateY(-12px);
+  opacity:0;
+  pointer-events:none;
+  transition:.25s ease;
+  z-index:500;
 }
 
 .mobile-panel.open {
-  transform: translateY(0);
-  opacity: 1;
-  pointer-events: auto;
+  transform:translateY(0);
+  opacity:1;
+  pointer-events:auto;
 }
 
 .mobile-panel .panel-inner {
-  padding: 16px;
+  padding:18px;
 }
-
 
   
 </style>
