--- a/index.html
+++ b/index.html
@@ -610,40 +610,42 @@ footer.site-footer{
     z-index:200;
   }
 
-  /* BRAND ROW */
+  /* BRAND ROW — FIXED */
   .brand {
-    display:grid;
-    grid-template-columns:auto 1fr auto;
+    display:flex;                         /* ← CHANGED from grid to flex */
     align-items:center;
+    justify-content:space-between;        /* ← keeps dots inside screen */
     width:100%;
-    gap:8px;                       /* more space */
+    gap:8px;
   }
 
   .brand img {
-    height:46px;                   /* slightly smaller */
+    height:46px;
   }
 
   .brand h1 {
-    font-size:16px;                /* reduced to prevent overflow */
+    font-size:16px;
     line-height:1.05;
     margin:0;
-    max-width:100px;               /* THIS FIXES the overflow */
-    word-break:break-word;
+    max-width:95px;                       /* ← reduced to prevent pushing menu */
+    overflow:hidden;
+    text-overflow:ellipsis;               /* ← clean cut, no overflow */
+    white-space:nowrap;                   /* ← single line to protect layout */
   }
 
-  /* MENU BUTTON */
+  /* MENU BUTTON — FIXED */
   .dot-btn {
     display:flex !important;
-    width:38px;
-    height:38px;
-    font-size:30px;
+    width:34px;                            /* ← smaller, fits any screen */
+    height:34px;
+    font-size:26px;
     justify-content:center;
     align-items:center;
     background:none;
     border:none;
     padding:0;
     cursor:pointer;
-    overflow:hidden;
+    flex-shrink:0;                         /* ← stops overflow 100% */
   }
 
   .dots {
@@ -655,18 +657,20 @@ footer.site-footer{
     display:flex;
     width:100%;
     gap:12px;
+    justify-content:flex-start;            /* ← stops stretching */
   }
 
   .nav-actions a {
-    flex:1;                         /* slightly bigger */
-    padding:10px 0 !important;      /* restores size */
-    font-size:16px !important;      /* larger text */
+    flex:0 0 auto;                         /* ← STOP stretching wide */
+    padding:10px 14px !important;          /* ← normal button size */
+    font-size:16px !important;
     text-align:center;
     border-radius:8px !important;
+    width:auto;                            /* ← natural width */
   }
 
   .btn {
-    padding:10px 0 !important;      /* override the zero padding */
+    padding:10px 14px !important;
   }
 }
 
