--- a/index.html
+++ b/index.html
@@ -697,6 +697,12 @@ footer.site-footer{
   padding:18px;
 }
 
+.site-header,
+.header-inner,
+.brand {
+    max-width: 100%;
+    overflow: hidden;
+}
 
 </style>
 </head>
