--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ html,body{
 
 
 
-}
+
 .hero-overlay{
   position:absolute;
   inset:0;
@@ -305,11 +305,15 @@ footer.site-footer{
   font-size:14px;
 }
 
-@media (max-width:520px){
-  .hero-huge{ font-size:28px }
-  .hero-sub{ font-size:18px }
 
-
+@media (max-width:520px) {
+  .hero-huge {
+    font-size: 28px;
+  }
+  .hero-sub {
+    font-size: 18px;
+  }
+}
 
 
 .hero-wrap {
