--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@ html,body{
   position:fixed;
   top:var(--utility-height);
   left:0; right:0;
-  height:var(--nav-height);
+ .site-header{
+  height:auto;
+}
+
   display:flex;
   align-items:center;
   justify-content:space-between;
@@ -81,7 +84,7 @@ html,body{
   gap:12px;
  
 }
-.brand img{ height:90px; width:auto; display:block; }
+.brand img{ height:60px; width:auto; display:block; }
 .brand h1{
   font-size:30px;
   letter-spacing:0.2px;
