--- a/index.html
+++ b/index.html
@@ -59,22 +59,20 @@ html,body{
 .top-nav a:hover{ text-decoration:underline }
 
 /* Fixed header */
-.site-header{
-  position:fixed;
-  top:var(--utility-height);
-  left:0; right:0;
- .site-header{
-  height:auto;
-}
-
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  background:rgba(255,255,255,0.72);
+.site-header {
+  position: fixed;
+  top: var(--utility-height);
+  left: 0;
+  right: 0;
+  height: auto;                /* allow natural height */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: rgba(255,255,255,0.72);
   backdrop-filter: blur(12px);
-  border-bottom:1px solid rgba(0,0,0,0.06);
-  z-index:90;
-  padding:0 18px;
+  border-bottom: 1px solid rgba(0,0,0,0.06);
+  z-index: 90;
+  padding: 0 18px;
 }
 
 /* Logo + NGO name */
@@ -317,7 +315,7 @@ footer.site-footer{
     font-size: 18px;
   }
 
-
+}
 
 .hero-wrap {
   position:relative;
@@ -676,7 +674,7 @@ footer.site-footer{
     border-radius:7px !important;
     width:auto;
   }
-
+}
 
 
 /* ========================= */
