--- a/index.html
+++ b/index.html
@@ -709,6 +709,119 @@ footer.site-footer{
     overflow: hidden;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ---------- Overflow & flex-safety fixes (paste at end) ---------- */
+
+/* Prevent global horizontal overflow from tiny rounding issues */
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+}
+
+/* Allow flex children to shrink (important) */
+.site-header,
+.site-header .brand,
+.brand {
+  min-width: 0;          /* allow children to shrink */
+  box-sizing: border-box;
+}
+
+/* Ensure brand row is a safe flex container */
+.brand {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  width: 100%;
+  padding-right: 8px;    /* give slight room for button */
+  box-sizing: border-box;
+}
+
+/* Logo: never grow past its container on small screens */
+.brand img {
+  max-width: 100%;
+  height: 40px;          /* small default logo height for phones */
+  width: auto;
+  flex: 0 0 auto;
+}
+
+/* Title: must wrap and never force line width */
+.brand h1 {
+  margin: 0;
+  padding: 0;
+  white-space: normal;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  flex: 1 1 auto;                           /* can grow & shrink */
+  min-width: 0;                             /* critical for shrinking */
+  max-width: calc(100% - 56px);             /* reserve room for dot button */
+  line-height: 1.05;
+  font-size: 14px;                          /* safe baseline on narrow screens */
+}
+
+/* Ensure menu button stays inside and visible */
+.dot-btn {
+  flex: 0 0 40px;
+  width: 40px;
+  height: 40px;
+  box-sizing: border-box;
+  margin-left: 6px;
+  z-index: 999;
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Make JOIN / DONATE flexible so they don't force header width */
+.nav-actions {
+  gap: 8px;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.nav-actions .btn {
+  white-space: nowrap;
+  max-width: 46vw;               /* prevent buttons from growing too wide */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  box-sizing: border-box;
+}
+
+/* Extra narrow breakpoint (phones) */
+@media (max-width:420px) {
+  .brand img { height: 32px; }
+  .brand h1 { font-size: 12.5px; max-width: calc(100% - 48px); }
+  .site-header { padding: 8px 10px; }
+  .nav-actions .btn { padding: 8px 10px; font-size: 13px; }
+  .side-nav a { font-size: 1rem; padding: 8px 10px; }
+}
+
+/* If any element still overflows, highlight it briefly for debug */
+/* (Remove the outline rule after you test) */
+@media (max-width:520px) {
+  .site-header *:not(.hero-slide) { /* visual helper — remove later */
+    /* outline: 1px dashed rgba(255,0,0,0.06); */
+  }
+}
+
+
+
+
+
+  
 </style>
 </head>
 <body>
