--- a/index.html
+++ b/index.html
@@ -714,146 +714,105 @@ footer.site-footer{
 
 
 
-
-
-
-
-/* ---------- Overflow & flex-safety fixes (paste at end) ---------- */
-
-/* Prevent global horizontal overflow from tiny rounding issues */
+/* ----------------------------------------- */
+/* GLOBAL SAFETY — Prevent overflow          */
+/* ----------------------------------------- */
 html, body {
   max-width: 100%;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
 }
 
-/* Allow flex children to shrink (important) */
+/* Flex safety */
 .site-header,
-.site-header .brand,
 .brand {
-  min-width: 0;          /* allow children to shrink */
+  min-width: 0;
   box-sizing: border-box;
 }
 
-/* Ensure brand row is a safe flex container */
+/* Brand row */
 .brand {
   display: flex;
   align-items: center;
   gap: 8px;
   width: 100%;
-  padding-right: 8px;    /* give slight room for button */
-  box-sizing: border-box;
+  padding-right: 8px;
 }
 
-/* Logo: never grow past its container on small screens */
+/* Logo (mobile baseline) */
 .brand img {
   max-width: 100%;
-  height: 40px;          /* small default logo height for phones */
-  width: auto;
+  height: 75px;
   flex: 0 0 auto;
 }
 
-/* Title: must wrap and never force line width */
+/* Title baseline */
 .brand h1 {
   margin: 0;
-  padding: 0;
   white-space: normal;
   overflow-wrap: break-word;
   word-break: break-word;
-  flex: 1 1 auto;                           /* can grow & shrink */
-  min-width: 0;                             /* critical for shrinking */
-  max-width: calc(100% - 56px);             /* reserve room for dot button */
+  flex: 1 1 auto;
+  min-width: 0;
+  max-width: calc(100% - 56px);
+  font-size: 14px;
   line-height: 1.05;
-  font-size: 14px;                          /* safe baseline on narrow screens */
 }
 
-/* Ensure menu button stays inside and visible */
+/* Menu button (mobile baseline) */
 .dot-btn {
   flex: 0 0 40px;
   width: 40px;
   height: 40px;
-  box-sizing: border-box;
   margin-left: 6px;
-  z-index: 999;
   display: flex !important;
   align-items: center;
   justify-content: center;
 }
 
-/* Make JOIN / DONATE flexible so they don't force header width */
+/* JOIN / DONATE safety */
 .nav-actions {
   gap: 8px;
   flex-wrap: wrap;
-  justify-content: flex-start;
 }
+
 .nav-actions .btn {
   white-space: nowrap;
-  max-width: 46vw;               /* prevent buttons from growing too wide */
+  max-width: 46vw;
   overflow: hidden;
   text-overflow: ellipsis;
   box-sizing: border-box;
 }
 
-/* Extra narrow breakpoint (phones) */
+/* Very small phones */
 @media (max-width:420px) {
   .brand img { height: 32px; }
   .brand h1 { font-size: 12.5px; max-width: calc(100% - 48px); }
   .site-header { padding: 8px 10px; }
   .nav-actions .btn { padding: 8px 10px; font-size: 13px; }
-  .side-nav a { font-size: 1rem; padding: 8px 10px; }
 }
 
-/* If any element still overflows, highlight it briefly for debug */
-/* (Remove the outline rule after you test) */
-@media (max-width:520px) {
-  .site-header *:not(.hero-slide) { /* visual helper — remove later */
-    /* outline: 1px dashed rgba(255,0,0,0.06); */
-  }
-}
-
-
-/* FORCE the menu button to stay hidden on desktop */
+/* ----------------------------------------- */
+/* DESKTOP (≥881px)                          */
+/* ----------------------------------------- */
 @media (min-width:881px) {
-  .dot-btn {
-    display: none !important;
-  }
-}
 
-/* Larger logo on desktop */
-@media (min-width:881px) {
+  /* Hide menu dots */
+  .dot-btn { display: none !important; }
+
+  /* Larger logo */
   .brand img {
-    height:140px !important;  /* bigger and stable */
+    height: 140px !important;
   }
-}
 
-@media (max-width:880px) {
-  .dot-btn .dots {
-    font-size: 42px !important;
-    line-height: 0.8;
-  }
-}
-
-
-
-
-@media (min-width:881px) {
+  /* Larger title */
   .brand h1 {
     font-size: 26px !important;
     line-height: 1.15 !important;
-    max-width: 260px !important; /* remove squish */
+    max-width: 260px !important;
   }
-}
 
-
-@media (max-width:880px) {
-  .brand h1 {
-    font-size: 18px !important;
-    line-height: 1.1 !important;
-    max-width: 150px !important;
-  }
-}
-
-  @media (min-width:881px) {
+  /* Keep JOIN + DONATE on one line */
   .nav-actions {
     display: flex !important;
     flex-direction: row !important;
@@ -861,6 +820,27 @@ html, body {
     align-items: center !important;
   }
 }
+
+/* ----------------------------------------- */
+/* MOBILE (≤880px)                           */
+/* ----------------------------------------- */
+@media (max-width:880px) {
+
+  /* Bigger menu icon */
+  .dot-btn .dots {
+    font-size: 42px !important;
+    line-height: 0.8;
+  }
+
+  /* Larger mobile title */
+  .brand h1 {
+    font-size: 18px !important;
+    line-height: 1.1 !important;
+    max-width: 150px !important;
+  }
+}
+
+
 
 </style>
 </head>
