--- a/index.html
+++ b/index.html
@@ -737,6 +737,7 @@ html, body {
   gap: 8px;
   width: 100%;
   padding-right: 8px;
+  font-weight:800;
 }
 
 /* Logo (mobile baseline) */
@@ -807,9 +808,9 @@ html, body {
 
   /* Larger title */
   .brand h1 {
-    font-size: 26px !important;
+    font-size: 35px !important;
     line-height: 1.15 !important;
-    max-width: 260px !important;
+    max-width: 280px !important;
   }
 
   /* Keep JOIN + DONATE on one line */
