--- a/index.html
+++ b/index.html
@@ -5,325 +5,289 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Swiss Aid Connect Foundation</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<style>
-/* ---------------------------
-   Variables
-   --------------------------- */
-:root{
-  --blue: #0b61b6;
-  --yellow: #f5c400;
-  --purple: #7a2fa6;
-
-  --utility-height: 32px;
-  --nav-height: 84px;
-  --side-nav-height: 48px;
-  --max-width: 1180px;
-
-  --header-padding-x: 18px;
-  --brand-gap: 12px;
-  --mobile-break: 880px;
-  --narrow-break: 520px;
+/* =========================================================
+   ROOT VARIABLES
+   ========================================================= */
+:root {
+  --blue:#0b61b6;
+  --yellow:#f5c400;
+  --purple:#7a2fa6;
+  --dark:#222;
+  --light:#fff;
+  --max-width:1180px;
+  --utility-height:32px;
+  --nav-height:84px;
+  --side-nav-height:48px;
 }
 
-/* ---------------------------
-   Reset / base
-   --------------------------- */
-*{ box-sizing: border-box; margin: 0; padding: 0; }
-html,body{ height:100%; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
-body, * { font-family: 'Poppins', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; color:#222; line-height:1.35; }
-h1,h2,h3,h4,h5,h6{ font-weight:600; }
+/* =========================================================
+   GLOBAL RESET
+   ========================================================= */
+html, body {
+  margin:0;
+  padding:0;
+  width:100%;
+  max-width:100%;
+  overflow-x:hidden;
+  font-family:'Poppins', sans-serif;
+  -webkit-overflow-scrolling:touch;
+}
 
-/* Prevent horizontal overflow */
-html,body { max-width:100%; overflow-x:hidden; -webkit-overflow-scrolling: touch; }
+img {
+  max-width:100%;
+  height:auto;
+  display:block;
+}
 
-/* ---------------------------
-   Top utility bar
-   --------------------------- */
-.top-nav {
-  position: fixed;
-  top: 0; left: 0; right: 0;
-  height: var(--utility-height);
-  background: rgba(255,255,255,0.72);
-  backdrop-filter: blur(12px);
+a {
+  text-decoration:none;
+  color:inherit;
+}
+
+/* =========================================================
+   HEADER WRAPPER
+   ========================================================= */
+.site-header {
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  z-index:999;
+  background:#fff;
+  padding:14px 20px;
   display:flex;
   align-items:center;
-  justify-content:flex-end;
-  gap:16px;
-  padding: 0 var(--header-padding-x);
-  border-bottom: 1px solid rgba(0,0,0,0.06);
-  z-index: 100;
-  font-size: 14px;
-}
-.top-nav a{ text-decoration:none; color:#333; font-weight:600; }
-.top-nav a:hover{ text-decoration:underline; }
-
-/* ---------------------------
-   Header (single source of truth)
-   --------------------------- */
-.site-header {
-  position: fixed;
-  top: var(--utility-height);
-  left: 0;
-  right: 0;
-  z-index: 90;
-  padding: 0 var(--header-padding-x);
-  background: rgba(255,255,255,0.72);
-  backdrop-filter: blur(12px);
-  border-bottom: 1px solid rgba(0,0,0,0.06);
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 12px;
-  height: var(--nav-height);
+  justify-content:space-between;
+  box-sizing:border-box;
 }
 
-/* Brand block: logo + title */
+/* =========================================================
+   BRAND (Logo + Title)
+   ========================================================= */
 .brand {
   display:flex;
   align-items:center;
-  gap: var(--brand-gap);
-  min-width:0;       /* allow shrinking */
+  gap:10px;
+  width:100%;
+  min-width:0;
 }
+
 .brand img {
-  display:block;
-  width: auto;
-  height: 90px;      /* desktop default */
-  flex: 0 0 auto;
+  height:44px;
+  width:auto;
+  flex-shrink:0;
 }
+
 .brand h1 {
-  font-size: 30px;      /* desktop default */
-  font-weight: 800;
-  color: #222;
-  line-height: 1;
-  white-space: nowrap;  /* single-line on desktop */
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 520px;
+  margin:0;
+  font-weight:700;
+  line-height:1.15;
+  flex:1 1 auto;
+  min-width:0;
+  max-width:100%;
+  white-space:normal;
+  overflow-wrap:break-word;
+  word-break:break-word;
+  font-size:16px;               /* Larger for better visibility */
 }
 
-/* Menu dots (mobile) */
-.dot-btn {
-  display: none;           /* hidden on desktop by default */
-  align-items:center;
-  justify-content:center;
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  padding: 0;
-  margin-left: 8px;
-  z-index: 999;
-}
-.dot-btn .dots {
-  display:block;
-  line-height:1;
-  font-size: 20px;   /* default, will scale on mobile */
-}
-
-/* Top-level horizontal nav (desktop) */
-.side-nav-container {
-  position: fixed;
-  top: calc(var(--utility-height) + var(--nav-height));
-  left: 0;
-  right: 0;
-  height: var(--side-nav-height);
-  display:flex;
-  align-items:center;
-  padding: 0 var(--header-padding-x);
-  background: rgba(255,255,255,0.72);
-  backdrop-filter: blur(12px);
-  border-top: 1px solid rgba(0,0,0,0.06);
-  border-bottom: 1px solid rgba(0,0,0,0.06);
-  z-index: 85;
-}
-.side-nav {
-  display:flex;
-  gap:16px;
-}
-.side-nav a{
-  text-decoration:none;
-  font-weight:600;
-  padding:8px 12px;
-  border-radius:6px;
-  font-size: 1rem;
-  transition: background .2s, color .2s;
-}
-.side-nav a:nth-of-type(1){ color:var(--blue); }
-.side-nav a:nth-of-type(2){ color:var(--purple); }
-.side-nav a:nth-of-type(3){ color:var(--yellow); }
-.side-nav a:nth-of-type(4){ color:#e94e77; }
-.side-nav a:hover{ background: rgba(0,0,0,0.06); color:#111; }
-
-/* Nav actions (Join / Donate) */
+/* =========================================================
+   DESKTOP ACTION BUTTONS (JOIN + DONATE)
+   ========================================================= */
 .nav-actions {
   display:flex;
   align-items:center;
-  gap: 12px;
-  flex-shrink: 0;
+  gap:12px;
 }
-.nav-actions .btn {
-  display:inline-flex;
-  align-items:center;
-  gap:8px;
-  padding:10px 18px;
+
+.nav-actions a {
+  display:inline-block;
+  padding:10px 16px;
+  font-size:15px;
+  font-weight:600;
   border-radius:8px;
-  font-weight:700;
-  text-decoration:none;
-  cursor:pointer;
-  border:none;
   white-space:nowrap;
 }
-.btn-join{ background:var(--blue); color:#fff; }
-.btn-donate{ background:var(--yellow); color:#111; box-shadow: 0 4px 12px rgba(0,0,0,0.08); }
 
-/* ---------------------------
-   Hero (kept, simplified)
-   --------------------------- */
-.hero-wrap {
-  position: relative;
-  height: calc(100vh - var(--utility-height) - var(--nav-height) - var(--side-nav-height));
-  margin-top: calc(var(--utility-height) + var(--nav-height) + var(--side-nav-height));
-  overflow:hidden;
-  z-index:0;
-}
-.hero-slider { position:absolute; inset:0; width:100%; height:100%; overflow:hidden; z-index:0; }
-.hero-slide { position:absolute; inset:0; width:100%; height:100%; object-fit:cover; opacity:0; animation: fade 25s infinite; }
-
-/* basic fade keyframes + variants */
-@keyframes fade {
-  0% { opacity:0; transform:scale(1.1); }
-  10% { opacity:1; transform:scale(1); }
-  20% { opacity:1; transform:scale(1); }
-  30% { opacity:0; transform:scale(1.05); }
-  100% { opacity:0; }
-}
-@keyframes fade-rotate { 0%,30%{ opacity:0; transform:rotate(-5deg);} 10%,20%{ opacity:1; transform:rotate(0);} 100%{ opacity:0; transform:rotate(5deg);} }
-@keyframes fade-zoom   { 0%,30%{ opacity:0; transform:scale(1.2);} 10%,20%{ opacity:1; transform:scale(1);} 100%{ opacity:0; transform:scale(1.1);} }
-@keyframes fade-slide  { 0%,30%{ opacity:0; transform:translateX(-100px);} 10%,20%{ opacity:1; transform:translateX(0);} 100%{ opacity:0; transform:translateX(100px);} }
-@keyframes fade-flip   { 0%,30%{ opacity:0; transform:rotateY(90deg);} 10%,20%{ opacity:1; transform:rotateY(0);} 100%{ opacity:0; transform:rotateY(-90deg);} }
-
-.slide1{ animation-name:fade; }
-.slide2{ animation-name:fade-rotate; animation-delay:5s; }
-.slide3{ animation-name:fade-zoom; animation-delay:10s; }
-.slide4{ animation-name:fade-slide; animation-delay:15s; }
-.slide5{ animation-name:fade-flip; animation-delay:20s; }
-
-/* overlay + content */
-.hero-overlay{ position:absolute; inset:0; background: linear-gradient(180deg, rgba(0,0,0,0.35), rgba(0,0,0,0.45)); z-index:1; }
-.hero-inner{ position:relative; z-index:2; width:100%; height:100%; display:flex; align-items:center; justify-content:center; text-align:center; padding:28px; }
-.hero-content{ max-width:1200px; width:100%; color:#fff; }
-.hero-huge{ font-weight:800; font-size:clamp(34px,7vw,64px); line-height:0.98; margin-bottom:18px; text-shadow: 0 10px 30px rgba(0,0,0,0.45); }
-.hero-sub{ display:block; font-weight:800; font-size:clamp(20px,3.5vw,34px); color:var(--yellow); margin-bottom:22px; text-shadow:0 6px 20px rgba(0,0,0,0.35); }
-.hero-ctas{ margin-top:8px; display:flex; gap:14px; justify-content:center; flex-wrap:wrap; }
-.hero-ctas .cta{ padding:14px 24px; border-radius:10px; font-weight:700; font-size:16px; display:inline-block; text-decoration:none; }
-.cta-primary{ background:var(--blue); color:#fff; }
-.cta-outline{ background: rgba(255,255,255,0.12); color:#fff; border:1px solid rgba(255,255,255,0.14); }
-
-/* ---------------------------
-   Sections (impact, about, serve) - simplified and kept
-   --------------------------- */
-/* Impact */
-.impact-section{ padding:80px 18px; background: linear-gradient(180deg,#f0f8ff 0%, #e6f2ff 100%); text-align:center; }
-.impact-container{ max-width:1200px; margin:0 auto; }
-.impact-grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:32px; justify-items:center; }
-.impact-card{ padding:28px 20px; transition: transform .3s, box-shadow .3s; color:#fff; font-weight:600; border-radius:14px; }
-.impact-card:nth-child(1){ background:var(--blue); }
-.impact-card:nth-child(2){ background:var(--yellow); color:#111; }
-.impact-card:nth-child(3){ background:var(--purple); }
-.impact-card:nth-child(4){ background:#e94e77; }
-.impact-card:hover{ transform:translateY(-8px) rotate(-1deg); box-shadow:0 12px 24px rgba(0,0,0,0.12); }
-
-/* About */
-.about-section{ padding:100px 18px; display:flex; justify-content:center; align-items:center; background: rgba(255,255,255,0.3) url('https://cdn.pixabay.com/photo/2016/11/29/03/53/technology-1868563_1280.jpg') center/cover no-repeat; color:#111; position:relative; border-radius:30px; overflow:hidden; }
-.about-section::before{ content:''; position:absolute; inset:0; background: rgba(0,0,0,0.35); z-index:1; }
-.about-container{ display:flex; gap:60px; max-width:1200px; align-items:center; flex-wrap:wrap; position:relative; z-index:2; }
-.about-text{ flex:1; min-width:300px; }
-.about-title{ font-size:clamp(32px,6vw,48px); font-weight:800; color:#fff; margin-bottom:20px; }
-
-/* Serve */
-.serve-section{ padding:100px 18px; background:#fefefe; position:relative; }
-.serve-container{ display:flex; gap:40px; max-width:1200px; margin:0 auto; align-items:center; flex-wrap:wrap; }
-.serve-paragraph{ font-size:18px; color:#333; line-height:1.8; text-align:center; }
-
-/* ---------------------------
-   Footer
-   --------------------------- */
-footer.site-footer{ background:#fafafa; padding:36px 18px; border-top:1px solid rgba(0,0,0,0.05); text-align:center; color:#444; font-size:14px; }
-
-/* ---------------------------
-   Responsive rules
-   --------------------------- */
-
-/* Narrow phones — ensure hero text scales */
-@media (max-width: var(--narrow-break)) {
-  .hero-huge { font-size: 28px; }
-  .hero-sub { font-size: 18px; }
+.btn-join {
+  background:var(--yellow);
+  color:#000;
 }
 
-/* Mobile layout changes (<= mobile-break) */
-@media (max-width: calc(var(--mobile-break) - 0px)) {
+.btn-donate {
+  background:var(--purple);
+  color:#fff;
+}
 
-  /* hide desktop horizontal nav */
-  .side-nav-container { display:none; }
+/* =========================================================
+   MOBILE MENU BUTTON (3 DOTS)
+   ========================================================= */
+.dot-btn {
+  display:none;
+  width:42px;
+  height:42px;
+  border-radius:10px;
+  background:transparent;
+  align-items:center;
+  justify-content:center;
+  font-size:42px;
+  padding:0;
+}
 
-  /* header becomes stacked column so brand can be two lines
-     but we will keep everything compact and control sizes */
-  .site-header {
-    height: auto;
-    padding: 8px 14px;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-  }
+/* =========================================================
+   MOBILE PANEL (SLIDING MENU)
+   ========================================================= */
+.mobile-panel {
+  position:fixed;
+  top:calc(var(--utility-height) + 110px);
+  left:0;
+  right:0;
+  background:#fff;
+  opacity:0;
+  transform:translateY(-12px);
+  pointer-events:none;
+  transition:0.25s ease;
+  z-index:500;
+}
 
-  /* make brand logo smaller mobile */
-  .brand img { height: 50px; }
+.mobile-panel.active {
+  opacity:1;
+  transform:translateY(0);
+  pointer-events:auto;
+}
 
-  /* brand title -> allow wrap (two lines allowed) */
-  .brand h1 {
-    font-size: 18px;
-    line-height: 1.05;
-    white-space: normal;
-    max-width: 150px;
-    overflow: visible;
-  }
+.side-nav {
+  padding:20px;
+  display:flex;
+  flex-direction:column;
+  gap:16px;
+}
 
-  /* show menu dots on mobile, larger */
-  .dot-btn { display: flex; }
-  .dot-btn .dots { font-size: 40px; /* doubled/large */ line-height: 0.8; }
+.side-nav a {
+  padding:10px;
+  font-size:1.1rem;
+  font-weight:600;
+}
 
-  /* nav actions: allow wrap and full-width buttons so they don't overlap */
+/* =========================================================
+   HERO SECTION
+   ========================================================= */
+.hero-section {
+  width:100%;
+  padding:130px 20px 60px;
+  background:#eae6ff;
+  box-sizing:border-box;
+  text-align:center;
+}
+
+.hero-huge {
+  font-size:48px;
+  font-weight:800;
+  line-height:1.1;
+  margin:0 auto 20px;
+}
+
+.hero-sub {
+  font-size:20px;
+  line-height:1.4;
+  max-width:560px;
+  margin:0 auto 30px;
+}
+
+/* CTA button */
+.serve-btn {
+  display:inline-block;
+  padding:14px 24px;
+  background:var(--purple);
+  color:#fff;
+  font-weight:700;
+  border-radius:12px;
+  margin-top:20px;
+}
+
+/* =========================================================
+   ANIMATIONS
+   ========================================================= */
+@keyframes fade-rotate {
+  0%,30%{ opacity:0; transform:rotate(-5deg);}
+  10%,20%{ opacity:1; transform:rotate(0deg);}
+  100%{ opacity:0; transform:rotate(5deg);}
+}
+
+@keyframes fade-zoom {
+  0%,30%{ opacity:0; transform:scale(1.2);}
+  10%,20%{ opacity:1; transform:scale(1);}
+  100%{ opacity:0; transform:scale(1.1);}
+}
+
+@keyframes fade-slide {
+  0%,30%{ opacity:0; transform:translateX(-100px);}
+  10%,20%{ opacity:1; transform:translateX(0);}
+  100%{ opacity:0; transform:translateX(100px);}
+}
+
+@keyframes fade-flip {
+  0%,30%{ opacity:0; transform:rotateY(90deg);}
+  10%,20%{ opacity:1; transform:rotateY(0);}
+  100%{ opacity:0; transform:rotateY(-90deg);}
+}
+
+/* =========================================================
+   MOBILE RESPONSIVE
+   ========================================================= */
+@media (max-width:880px) {
+
   .nav-actions {
-    gap: 8px;
-    flex-wrap: wrap;
-    width: auto;
+    display:none; /* hide join/donate */
   }
-  .nav-actions .btn { padding:9px 14px; font-size:15px; }
 
-  /* move header items so dot button sits to right (use margin-left auto on dot) */
-  .dot-btn { margin-left: auto; }
+  .dot-btn {
+    display:flex;
+  }
+
+  .brand img {
+    height:36px;
+  }
+
+  .brand h1 {
+    font-size:15px;
+    max-width:150px;
+  }
+
+  .hero-huge { font-size:32px; }
+  .hero-sub { font-size:18px; }
+
+  .site-header {
+    padding:12px 16px;
+  }
 }
 
-/* Desktop rules (>= mobile-break) */
-@media (min-width: calc(var(--mobile-break))) {
-
-  /* dot button hidden on desktop */
-  .dot-btn { display: none !important; }
-
-  /* brand bigger on desktop */
-  .brand img { height: 140px; }
-  .brand h1 { font-size: 35px; white-space: nowrap; }
-
-  /* ensure nav-actions do not wrap and stay inline */
-  .nav-actions { display:flex; gap: 14px; align-items:center; flex-wrap: nowrap; }
-  .nav-actions .btn { white-space: nowrap; }
+/* Very small screens */
+@media (max-width:420px) {
+  .brand img { height:32px; }
+  .brand h1 { font-size:14px; }
 }
 
-/* Extra safety: prevent any flex child from forcing overflow */
-.site-header, .brand, .nav-actions { min-width: 0; }
+/* =========================================================
+   DESKTOP IMPROVEMENTS
+   ========================================================= */
+@media (min-width:881px) {
 
-/* End of stylesheet */
-</style>
+  .dot-btn { display:none !important; }
+
+  .brand img {
+    height:140px;
+  }
+
+  .brand h1 {
+    font-size:28px;
+    max-width:260px;
+  }
+
+  .nav-actions {
+    display:flex;
+  }
+}
 
 </head>
 <body>
