--- a/index.html
+++ b/index.html
@@ -892,12 +892,12 @@ html, body {
 .mobile-panel a {
   display: block;
   padding: 14px 18px;
-  font-size: 18px;
+  font-size: 24px;
   font-weight: 700;
   margin-bottom: 10px;
   border-radius: 10px;
   text-decoration: none;
-  text-align: center;
+  text-align: right;
 }
 
 /* COLOR MATCHING DESKTOP NAV */
