--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@ html, body {
 
     <!-- Row 1: Logo + Two-line NGO Name -->
  <div class="brand">
-  <img src=https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png"" alt="swisslogo" />
+  <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png" alt="swisslogo" />
 
   <h1>
     Swiss Aid Connect<br>
