--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@ html, body {
   <!-- Desktop Side Navigation -->
   <div class="side-nav-container">
     <nav class="side-nav" role="navigation" aria-label="Main navigation">
-      <a href="#">About Us</a>
+      <a href="https://webs-star.github.io/swissaid/about">About Us</a>
       <a href="#">Our Impact</a>
       <a href="#">Get Involved</a>
       <a href="#" target="_blank" rel="noopener">Member Resource Center ↗</a>
