--- a/index.html
+++ b/index.html
@@ -923,7 +923,12 @@ html, body {
 .mobile-panel a:nth-child(9) { color:#7a2fa6 !important; } /* Get Involved */
 
 
-  
+  @media (min-width:881px) {
+  .side-nav-container {
+    top: calc(var(--utility-height) + 150px) !important;
+  }
+}
+
 </style>
 </head>
 <body>
