--- a/home.html
+++ b/home.html
@@ -935,7 +935,7 @@ html, body {
   <a href="#">Shop</a>
   <a href="#">Convention</a>
   <a href="#">Find a Club</a>
-   <a href="#" id="langToggle" data-lang="en">EN</a> </div>
+   <a href="#" id="langToggle" data-lang="en">EN</a> 
 </div>
 
 <!-- Main Header -->
