--- a/home2.html
+++ b/home2.html
@@ -608,6 +608,19 @@ footer.site-footer{
     display: none !important;
   }
 
+
+
+@media (max-width:880px) {
+  .brand h1 {
+    white-space: normal !important;
+    font-size: 22px !important;
+    line-height: 1.15;
+    max-width: 150px;   /* forces wrapping */
+  }
+}
+
+
+
   /* Make header auto-height on phone */
   .site-header {
     height: auto;
@@ -765,15 +778,13 @@ footer.site-footer{
     </nav>
   </div>
   
+</header>
   
   
 <!-- Mobile Menu Panel -->
 <div id="mobileMenu" class="mobile-panel" aria-hidden="true" role="menu">
   <div class="panel-inner" id="mobileMenuInner"></div>
 </div>
-  
-</header>
-
 
 <main>
   <section class="hero-wrap" aria-labelledby="hero-heading">
