--- a/home2.html
+++ b/home2.html
@@ -637,7 +637,7 @@ footer.site-footer{
   }
 
   .brand img {
-    height: 58px;       /* reduce logo size on phone */
+    height: 62px;       /* reduce logo size on phone */
   }
 
   .brand h1 {
@@ -726,6 +726,11 @@ footer.site-footer{
 }
 
 
+@media (max-width: 880px) {
+  .top-nav {
+    display: none !important;
+  }
+}
 
 
 
